Blender crashes while open/close a scene and deletes .blend-file #30839

Closed
opened 2012-04-06 21:50:02 +02:00 by Florian Voelker · 4 comments

Relates to: #30493

%%%Following problems:

  1. When I start the game engine, it doesn't load the textures for the text or crashes immediately.
  2. When I close the game engine after it and load it again, blender crashes and will close without starting the scene.
  3. The autosave-function deltes sometimes the Blendfile while crashing.
  4. Checked on two PCs (PC/Notebook)

In the Attachment, there are the files to comprehend the error.

Testet Blender Versions(64Bit): r44136, r45364 and r45364

PC1:
OS: Windows7 Professional 64Bit
Processor: Intel Core i5 2500 3,3GHZ
Ram: 8GB DDR3
Graphic: Nvidia GeForce570GTX GS GLH
HDD: SSD 120GB

Notebook:
OS: Windows7 Professional 64Bit
Processor: Intel Core2Duo T7500 2,2GHZ
Ram: 3GB DDR2
Graphic: Nvidia GeForce8600mGT

Thank you for a fast check of Blender.
Sorry, if there is a error in my setup, but there should be no error created by me.%%%

**Relates to**: #30493 %%%Following problems: 1. When I start the game engine, it doesn't load the textures for the text or crashes immediately. 2. When I close the game engine after it and load it again, blender crashes and will close without starting the scene. 3. The autosave-function deltes sometimes the Blendfile while crashing. 4. Checked on two PCs (PC/Notebook) In the Attachment, there are the files to comprehend the error. Testet Blender Versions(64Bit): r44136, r45364 and r45364 PC1: OS: Windows7 Professional 64Bit Processor: Intel Core i5 2500 3,3GHZ Ram: 8GB DDR3 Graphic: Nvidia GeForce570GTX GS GLH HDD: SSD 120GB Notebook: OS: Windows7 Professional 64Bit Processor: Intel Core2Duo T7500 2,2GHZ Ram: 3GB DDR2 Graphic: Nvidia GeForce8600mGT Thank you for a fast check of Blender. Sorry, if there is a error in my setup, but there should be no error created by me.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed
Dev note: This is related to [#30493]. Materials for fonts retain a pointer to a freed tface array after a dm->release. See BL_ConvertMesh(...).%%%

%%%Confirmed Dev note: This is related to [#30493]. Materials for fonts retain a pointer to a freed tface array after a dm->release. See BL_ConvertMesh(...).%%%

%%%fixed r45506.%%%

%%%fixed r45506.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30839
No description provided.