fix [#30839] Blender crashes while open/close a scene and deletes .blend-file